--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyKotlinMVPApp</string>
+    <string name="counter_1">Counter 1</string>
+    <string name="counter_2">Counter 2</string>
+    <string name="counter_3">Counter 3</string>
 </resources>
