--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="counter_2">Counter 2</string>
     <string name="counter_3">Counter 3</string>
     <string name="click_on_me">click on me</string>
+    <string name="avatar">avatar</string>
 </resources>
