--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="forks">Forks:</string>
     <string name="watchers">Watchers:</string>
     <string name="http_link">Http link:</string>
+    <string name="search">Search</string>
 </resources>
